unpackaged/objects/Leadership__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Description__c</fullName>
        <label>Additional Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Leaderships</relationshipLabel>
        <relationshipName>Leaderships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class_Year__c</fullName>
        <label>Class Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit__c</fullName>
        <label>Commit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leadership</relationshipLabel>
        <relationshipName>Leaderships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leadership_Goals__c</fullName>
        <label>Leadership Goals</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Meaningful_Experience__c</fullName>
        <label>Meaningful Experiance</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled by Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ignite Application</fullName>
                </value>
                <value>
                    <fullName>Intergroup Dialogue Interest</fullName>
                </value>
                <value>
                    <fullName>Leadership Certificate Info Session</fullName>
                </value>
                <value>
                    <fullName>Leadership Certificate Sign-up</fullName>
                </value>
                <value>
                    <fullName>Leadership Ethics Application</fullName>
                </value>
                <value>
                    <fullName>Leadership Fundamentals Application</fullName>
                </value>
                <value>
                    <fullName>NGO Bootcamp Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Leadership</label>
    <nameField>
        <displayFormat>L-{0000000000}</displayFormat>
        <label>Leadership ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaderships</pluralLabel>
    <recordTypes>
        <fullName>Ignite_Application</fullName>
        <active>true</active>
        <label>Ignite Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Intergroup_Dialogue_Interest</fullName>
        <active>true</active>
        <label>Intergroup Dialogue Interest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leadership_Certificate_Info_Session</fullName>
        <active>true</active>
        <label>Leadership Certificate Info Session</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leadership_Certificate_Sign_up</fullName>
        <active>true</active>
        <label>Leadership Certificate Sign-up</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leadership_Ethics_Application</fullName>
        <active>true</active>
        <label>Leadership Ethics Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leadership_Fundamentals_Application</fullName>
        <active>true</active>
        <label>Leadership Fundamentals Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Bootcamp_Application</fullName>
        <active>true</active>
        <label>NGO Bootcamp Application</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>